# MarkdownOrganizer

./: .gitignore  .hgignore  readme.md
app/: CMakeLists.txt
app/etc/: astyle.conf  header_license.txt
app/images/: macos-app.icns
app/src/: MarkdownOrganizer.pro  defaults.pri
app/src/lib/SmtpClient/: SmtpClient.pro
app/src/lib/SmtpClient/src/: emailaddress.cpp  emailaddress.h  mimeattachment.cpp  mimeattachment.h  mimecontentformatter.cpp  mimefile.cpp  mimefile.h  mimehtml.cpp  mimehtml.h  mimeinlinefile.cpp  mimemessage.cpp  mimemessage.h  mimemultipart.cpp  mimemultipart.h  mimepart.cpp  mimepart.h  mimetext.cpp  mimetext.h  quotedprintable.cpp  smtpclient.cpp  smtpclient.h
app/src/mdoapp/: mdoapp.pro
app/src/mdoapp/src/mdoapp/: app-main.cpp
app/src/mdoapp/src/mdoapp/gui/: appmainwindow.cpp  appmainwindow.h  appmainwindow.ui  browserwindow.cpp  browserwindow.h  browserwindow.ui  helpwindow.cpp  helpwindow.h  helpwindow.ui
app/src/mdoapp/src/mdoapp/gui/docks/: dockdata.cpp  dockdata.h  helpdockwidget.cpp  helpdockwidget.h  helpdockwidget.ui  logdockwidget.cpp  logdockwidget.h  logdockwidget.ui  mdodockwidget.cpp  mdodockwidget.h  menudockwidget.cpp  menudockwidget.h  menudockwidget.ui  previewdockwidget.cpp  previewdockwidget.h  previewdockwidget.ui  projectdockwidget.cpp  projectdockwidget.h  projectdockwidget.ui
app/src/mdoapp/src/mdoapp/gui/tools/: dashboardtoolwidget.cpp  dashboardtoolwidget.h  dashboardtoolwidget.ui  editortoolwidget.cpp  editortoolwidget.h  editortoolwidget.ui  helptoolwidget.cpp  helptoolwidget.h  helptoolwidget.ui  historytoolwidget.cpp  historytoolwidget.h  historytoolwidget.ui
app/src/mdoapp/src/mdoapp/gui/widgets/: helpwidget.cpp  helpwidget.h  helpwidget.ui  projectwidget.cpp  projectwidget.h  projectwidget.ui
app/src/mdocore/: mdocore.pro
app/src/mdocore/resources/: mdocore.qrc
app/src/mdocore/resources/mdocore/: mdocore.qss
app/src/mdocore/resources/mdocore/css/: dark.css  dracula1.css  dracula2.css  intellij.css  simple.css
app/src/mdocore/resources/mdocore/lang/: mdo_en.qm  mdo_en.ts
app/src/mdocore/src/mdocore/: databasemanager.cpp  databasemanager.h  global.h  iplugin.h  logmanager.cpp  logmanager.h  mdoapplication.cpp  mdoapplication.h  mdocore_global.h  objectmanager.cpp  objectmanager.h  plugindata.cpp  plugindata.h  pluginmanager.cpp  pluginmanager.h  settingsmanager.cpp  settingsmanager.h  slugify.hpp
app/src/mdocore/src/mdocore/db/: initdb.h
app/src/mdocore/src/mdocore/gui/dialogs/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  plugindialog.cpp  plugindialog.h  plugindialog.ui  projectdialog.cpp  projectdialog.h  projectdialog.ui  projecttablemodel.cpp  projecttablemodel.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
app/src/mdocore/src/mdocore/lib/QtAwesome/QtAwesome/: QtAwesome.cpp  QtAwesome.h  QtAwesomeAnim.cpp  QtAwesomeAnim.h
app/src/mdocore/src/mdocore/lib/QtAwesome/QtAwesomeSample/: main.cpp
app/src/mdocore/src/mdocore/lib/hoedown/src/: autolink.h  buffer.h  document.h  escape.h  html.h  stack.c
app/src/mdocore/src/mdocore/lib/qt-mustache/: mustache.cpp  mustache.h
app/src/mdocore/src/mdocore/models/: blogresource.cpp  blogresource.h  model.cpp  model.h  pageresource.cpp  pageresource.h  project.cpp  project.h  resource.cpp  resource.h
app/src/mdocore/src/mdocore/util/: qtutils.cpp  qtutils.h
app/src/mdomobile/: contactmodel.qml  mdomobile.pro  mdomobile.qml  mobile-main.cpp  qtquickcontrols2.conf
app/src/mdomobile/pages/: editor.qml  history.qml  scrollablepage.qml  settings.qml
app/src/mdoplugins/: mdoplugins.pro
app/src/mdoplugins/coreplugin/: coreplugin.pro
app/src/mdoplugins/coreplugin/src/coreplugin/: coreplugin.cpp  coreplugin.h
app/src/mdoplugins/hugoplugin/: hugoplugin.pro
app/src/mdoplugins/hugoplugin/src/hugoplugin/: hugoplugin.cpp  hugoplugin.h
app/src/mdoplugins/mdoplugin/: mdoplugin.pro
app/src/mdoplugins/mdoplugin/src/mdoplugin/: mdoplugin.cpp  mdoplugin.h
app/src/mdoplugins/middlemanplugin/: middlemanplugin.pro
app/src/mdoplugins/middlemanplugin/src/middlemanplugin/: middlemanplugin.cpp  middlemanplugin.h
app/src/mdoplugins/staticaplugin/: staticaplugin.pro
app/src/mdoplugins/staticaplugin/src/staticaplugin/: staticaplugin.cpp  staticaplugin.h
app/src/mdowidget/: mdowidget.pro
app/src/mdowidget/src/mdowidget/: widget-main.cpp
app/src/mdowidget/src/mdowidget/gui/: widgetmainwindow.cpp  widgetmainwindow.h  widgetmainwindow.ui
app/src/resources/assets/css/: pure-min.css
app/src/resources/help/: index.md  toc.md
app/src/resources/html/: welcome.html
app/src/resources/sampleproject/: index.md
app/src/tests/: tests.pro
graphics/: icon.psd  icon_16.psd  icon_32.psd  splash.psd
