cmake_minimum_required(VERSION 3.8)
project(app)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        src/mdoapp/src/mdoapp/gui/docks/dockdata.cpp
        src/mdoapp/src/mdoapp/gui/docks/dockdata.h
        src/mdoapp/src/mdoapp/gui/docks/dsdockwidget.cpp
        src/mdoapp/src/mdoapp/gui/docks/dsdockwidget.h
        src/mdoapp/src/mdoapp/gui/docks/helpdockwidget.cpp
        src/mdoapp/src/mdoapp/gui/docks/helpdockwidget.h
        src/mdoapp/src/mdoapp/gui/docks/logdockwidget.cpp
        src/mdoapp/src/mdoapp/gui/docks/logdockwidget.h
        src/mdoapp/src/mdoapp/gui/docks/menudockwidget.cpp
        src/mdoapp/src/mdoapp/gui/docks/menudockwidget.h
        src/mdoapp/src/mdoapp/gui/docks/projectdockwidget.cpp
        src/mdoapp/src/mdoapp/gui/docks/projectdockwidget.h
        src/mdoapp/src/mdoapp/gui/tools/dashboardtoolwidget.cpp
        src/mdoapp/src/mdoapp/gui/tools/dashboardtoolwidget.h
        src/mdoapp/src/mdoapp/gui/tools/editortoolwidget.cpp
        src/mdoapp/src/mdoapp/gui/tools/editortoolwidget.h
        src/mdoapp/src/mdoapp/gui/tools/helptoolwidget.cpp
        src/mdoapp/src/mdoapp/gui/tools/helptoolwidget.h
        src/mdoapp/src/mdoapp/gui/tools/historytoolwidget.cpp
        src/mdoapp/src/mdoapp/gui/tools/historytoolwidget.h
        src/mdoapp/src/mdoapp/gui/appmainwindow.cpp
        src/mdoapp/src/mdoapp/gui/appmainwindow.h
        src/mdoapp/src/mdoapp/gui/browserwindow.cpp
        src/mdoapp/src/mdoapp/gui/browserwindow.h
        src/mdoapp/src/mdoapp/app-main.cpp
        src/mdocore/src/mdocore/gui/dialogs/aboutdialog.cpp
        src/mdocore/src/mdocore/gui/dialogs/aboutdialog.h
        src/mdocore/src/mdocore/gui/dialogs/plugindialog.cpp
        src/mdocore/src/mdocore/gui/dialogs/plugindialog.h
        src/mdocore/src/mdocore/gui/dialogs/settingsdialog.cpp
        src/mdocore/src/mdocore/gui/dialogs/settingsdialog.h
        src/mdocore/src/mdocore/lib/hoedown/bin/common.h
        src/mdocore/src/mdocore/lib/hoedown/bin/hoedown.c
        src/mdocore/src/mdocore/lib/hoedown/bin/smartypants.c
        src/mdocore/src/mdocore/lib/hoedown/src/autolink.c
        src/mdocore/src/mdocore/lib/hoedown/src/autolink.h
        src/mdocore/src/mdocore/lib/hoedown/src/buffer.c
        src/mdocore/src/mdocore/lib/hoedown/src/buffer.h
        src/mdocore/src/mdocore/lib/hoedown/src/document.c
        src/mdocore/src/mdocore/lib/hoedown/src/document.h
        src/mdocore/src/mdocore/lib/hoedown/src/escape.c
        src/mdocore/src/mdocore/lib/hoedown/src/escape.h
        src/mdocore/src/mdocore/lib/hoedown/src/html.c
        src/mdocore/src/mdocore/lib/hoedown/src/html.h
        src/mdocore/src/mdocore/lib/hoedown/src/html_blocks.c
        src/mdocore/src/mdocore/lib/hoedown/src/html_smartypants.c
        src/mdocore/src/mdocore/lib/hoedown/src/stack.c
        src/mdocore/src/mdocore/lib/hoedown/src/stack.h
        src/mdocore/src/mdocore/lib/hoedown/src/version.c
        src/mdocore/src/mdocore/lib/hoedown/src/version.h
        src/mdocore/src/mdocore/lib/qt-mustache/mustache.cpp
        src/mdocore/src/mdocore/lib/qt-mustache/mustache.h
        src/mdocore/src/mdocore/lib/QtAwesome/QtAwesome/QtAwesome.cpp
        src/mdocore/src/mdocore/lib/QtAwesome/QtAwesome/QtAwesome.h
        src/mdocore/src/mdocore/lib/QtAwesome/QtAwesome/QtAwesomeAnim.cpp
        src/mdocore/src/mdocore/lib/QtAwesome/QtAwesome/QtAwesomeAnim.h
        src/mdocore/src/mdocore/lib/QtAwesome/QtAwesomeSample/main.cpp
        src/mdocore/src/mdocore/models/blogresource.cpp
        src/mdocore/src/mdocore/models/blogresource.h
        src/mdocore/src/mdocore/models/model.cpp
        src/mdocore/src/mdocore/models/model.h
        src/mdocore/src/mdocore/models/pageresource.cpp
        src/mdocore/src/mdocore/models/pageresource.h
        src/mdocore/src/mdocore/models/project.cpp
        src/mdocore/src/mdocore/models/project.h
        src/mdocore/src/mdocore/models/resource.cpp
        src/mdocore/src/mdocore/models/resource.h
        src/mdocore/src/mdocore/util/qtutils.cpp
        src/mdocore/src/mdocore/util/qtutils.h
        src/mdocore/src/mdocore/mdoapplication.cpp
        src/mdocore/src/mdocore/mdoapplication.h
        src/mdocore/src/mdocore/mdocore.cpp
        src/mdocore/src/mdocore/mdocore.h
        src/mdocore/src/mdocore/mdocore_global.h
        src/mdocore/src/mdocore/global.h
        src/mdocore/src/mdocore/iplugin.h
        src/mdocore/src/mdocore/logmanager.cpp
        src/mdocore/src/mdocore/logmanager.h
        src/mdocore/src/mdocore/objectmanager.cpp
        src/mdocore/src/mdocore/objectmanager.h
        src/mdocore/src/mdocore/plugindata.cpp
        src/mdocore/src/mdocore/plugindata.h
        src/mdocore/src/mdocore/pluginmanager.cpp
        src/mdocore/src/mdocore/pluginmanager.h
        src/mdocore/src/mdocore/settingsmanager.cpp
        src/mdocore/src/mdocore/settingsmanager.h
        src/mdocore/src/mdocore/slugify.hpp
        src/mdocore/mdocore_en_us.ts
        src/mdomobile/mobile-main.cpp
        src/mdoplugins/coreplugin/src/coreplugin/coreplugin.cpp
        src/mdoplugins/coreplugin/src/coreplugin/coreplugin.h
        src/mdoplugins/hugoplugin/src/hugoplugin/hugoplugin.cpp
        src/mdoplugins/hugoplugin/src/hugoplugin/hugoplugin.h
        src/mdoplugins/middlemanplugin/src/middlemanplugin/middlemanplugin.cpp
        src/mdoplugins/middlemanplugin/src/middlemanplugin/middlemanplugin.h
        src/mdoplugins/testplugin/src/testplugin/testplugin.cpp
        src/mdoplugins/testplugin/src/testplugin/testplugin.h
        src/mdowidget/src/mdowidget/gui/widgetmainwindow.cpp
        src/mdowidget/src/mdowidget/gui/widgetmainwindow.h
        src/mdowidget/src/mdowidget/widget-main.cpp)

add_executable(app ${SOURCE_FILES})